# openeebus

./: CMakeLists.txt  README.md  sources.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yaml
esphome/: hems_14a_example.yaml
esphome/components/eebus_lpc/: CMakeLists.txt  __init__.py  eebus_lpc.cpp  eebus_lpc.h
esphome/components/eebus_wp/: __init__.py  eebus_wp.cpp  eebus_wp.h
examples/heat_pump/: CMakeLists.txt  cs_lpc_listener.c  cs_lpp_listener.c  cs_lpp_listener.h  hpsrv.c  hpsrv.h  main.c
examples/hems/: CMakeLists.txt  eg_lpc_listener.c  eg_lpc_listener.h  eg_lpp_listener.c  eg_lpp_listener.h  hems.c  hems.h  ma_mgcp_listener.c  ma_mgcp_listener.h  ma_mpc_listener.c  main.c
port/: README.md
port/esp32/component/: CMakeLists.txt  eebus_malloc_esp32.h
port/esp32/websocket/: websocket_client_creator_esp32.c  websocket_client_esp32.c  websocket_client_esp32.h  websocket_server_creator_esp32.c  websocket_server_esp32.c  websocket_server_esp32.h
scripts/codestyle/: format_diff.sh
src/cli/: commands_examples.md  eebus_cli.c  eebus_cli.c.tmp  eebus_cli.h  eebus_cli_cs_lp.c  eebus_cli_eg_lp.c  eebus_cli_eg_lpc.c  eebus_cli_eg_lpc.h  eebus_cli_gcp_mgcp.c  eebus_cli_gcp_mgcp.h  eebus_cli_interface.h  eebus_cli_internal.h  eebus_cli_ma_mgcp.c  eebus_cli_ma_mgcp.h  eebus_cli_ma_mpc.c  eebus_cli_ma_mpc.h  eebus_cli_mu_mpc.c
src/common/: eebus_malloc.h  json_impl_cjson.c  string_lut.c  string_util.c  uint64_lut.c
src/common/api/: eebus_data_interface.h
src/common/eebus_data/: eebus_data_base.c  eebus_data_base.h  eebus_data_choice.c  eebus_data_choice_root.c  eebus_data_container.c  eebus_data_enum.c  eebus_data_enum.h  eebus_data_list.c  eebus_data_list.h  eebus_data_numeric.c  eebus_data_sequence.c  eebus_data_sequence.h  eebus_data_simple.c  eebus_data_sources.cmake  eebus_data_string.c  eebus_data_stub.c  eebus_data_tag.c
src/common/eebus_date_time/: eebus_date.c  eebus_date_time_sources.cmake  eebus_duration.c  eebus_duration.h
src/common/eebus_math/: eebus_math.c  eebus_math.h
src/service/api/: eebus_service_config.h
src/service/service/: eebus_service.c
src/ship/mdns/: mdns_debug.c  mdns_debug.h  mdns_entry.c  ship_mdns_avahi.c  ship_mdns_bonjour.c  ship_mdns_freertos.c
src/ship/ship_connection/: ship_connection.c  ship_connection_debug.c  ship_message_serialize.c
src/ship/ship_node/: ship_node.c
src/ship/tls_certificate/: tls_certificate.c
src/ship/websocket/: http_server.c  websocket.c  websocket_client.c  websocket_server_creator.c
src/spine/api/: device_remote_interface.h  entity_remote_interface.h  events.h  function_interface.h
src/spine/binding/: binding_manager.c
src/spine/device/: data_reader.c  device_local.c  device_local.h  device_local_internal.h  device_remote.c  device_remote.c.tmp  device_remote.h  sender.c
src/spine/entity/: entity_local.c  entity_local.h  entity_remote.c  entity_remote.c.tmp
src/spine/events/: events.c  events.h
src/spine/feature/: feature_local.c  feature_remote.c  feature_remote_internal.h
src/spine/function/: function.c  function.c.tmp
src/spine/heartbeat/: heartbeat_manager.c  heartbeat_manager.h
src/spine/model/: actuator_level_types.inc  actuator_switch_types.inc  alarm_types.inc  bill_types.inc  command_frame_types.inc  common_data_types.inc  datagram.c  datagram.inc  device_classification_types.inc  device_configuration_types.c  device_configuration_types.h  device_configuration_types.inc  device_diagnosis_types.inc  device_types.inc  electrical_connection_types.h  electrical_connection_types.inc  entity_types.c  entity_types.h  entity_types.inc  feature_types.inc  function_types.inc  hvac_types.inc  identification_types.inc  loadcontrol_types.c  loadcontrol_types.h  loadcontrol_types.inc  measurement_types.inc  messaging_types.inc  network_management_types.inc  power_sequences_types.inc  sensing_types.inc  setpoint_types.inc  state_information_types.inc  supply_conditions_types.inc  tariff_information_types.inc  task_management_types.inc  threshold_types.inc  time_series_types.inc  timetable_types.inc  usecase_information_types.c  (+1 more)
src/spine/node_management/: node_management.h  node_management_destination_list.c  node_management_detailed_discovery.c  node_management_remote.c  node_management_remote.h  node_management_usecase.c
src/spine/subscription/: subscription_manager.c
src/use_case/: use_case.c  use_case.c.tmp  use_case.h
src/use_case/actor/common/: eebus_measurement.c.tmp  eebus_measurement_base.c  eebus_measurement_base.h  eebus_monitor.c.tmp  eebus_monitor_base.c  eebus_monitor_base.h  eebus_monitor_container.c  eebus_monitor_container.h  eebus_monitor_features.c  eebus_monitor_features.h  load_control.c  load_control.h
src/use_case/actor/cs/: cs_lp.c  cs_lp_events.c
src/use_case/actor/eg/: eg_lp.h
src/use_case/actor/ma/: ma_events.c  ma_events.h  ma_measurement.c.tmp  ma_measurement_base.c  ma_measurement_base.h
src/use_case/api/: cs_lpc_listener_interface.h  eebus_measurement_interface.h  eebus_monitor_interface.h  eg_lpc_listener_interface.h  gcp_mgcp_measurement_interface.h  gcp_mgcp_monitor_interface.h  ma_measurement_interface.h  ma_mgcp_listener_interface.h  ma_mgcp_measurement_interface.h  ma_mpc_listener_interface.h  ma_mpc_measurement_interface.h  mu_mpc_measurement_interface.h  mu_mpc_monitor_interface.h  use_case_interface.h
src/use_case/model/: eebus_measurement_types.h  load_limit_types.c  load_limit_types.h  mgcp_types.c  mgcp_types.h  mpc_types.c  mpc_types.h  scaled_value.c  scaled_value.h
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  string_ptr.h  value_ptr.h
tests/src/common/eebus_data/: CMakeLists.txt
tests/src/common/eebus_date_time/: CMakeLists.txt  (+1 more)
tests/src/mocks/: mock_inst.h
tests/src/spine/model/function_data/: CMakeLists.txt
tests/src/spine/node_management/node_management_remote/: CMakeLists.txt  node_management_remote_test.cpp  use_case_data_less_cases.inc  use_case_data_more_cases.inc  use_case_data_no_entity_addr.inc
tests/src/use_case/: use_case_test_fixture.cpp  use_case_test_fixture.h
(+258 files in other folders)
